Tue Jun  1 15:43:45 BST 2004  Riccardo Mottola <rollei@tiscalinet.it>

	* debugapp.in (appname): Fixed escaping of --args argument to work
	with an alien grep / os.

2004-05-17 Richard Frith-Macdonald <rfm@gnu.org>

        * Instance/Documentation/autogsdoc.make: Simplify rules.  Avoid
	dependency on existence of documentation subdirectory by relying on
	new autogsdoc feature (it now creates the subdirectory if necessary).
	This prevents possible recursion in make process.

2004-05-07 Richard Frith-Macdonald <rfm@gnu.org>

	* Master/rules.make: Pass 'operation' to instances in
	'GNUSTEP_OPERATION'
        * Instance/Documentation/autogsdoc.make: Use 'GNUSTEP_OPERATION'

Thu Apr 29 15:54:17 2004  Nicola Pero <n.pero@mi.flashnet.it>
	
	* Instance/Documentation/autogsdoc.make
	(GNUSTEP_INSTANCE/dependencies): Only include this file when the
	operation is 'all'.
	(internal-doc-clean): Do not run autogsdoc here.
	(internal-doc-distclean): Rule removed.  No longer needed, as the
	previous changes should do the real fix.
	
Thu Apr 29 14:04:61 2004  Nicola Pero <n.pero@mi.flashnet.it>

	* Instance/Documentation/autogsdoc.make (internal-doc-distclean):
	Added rule, to make sure a 'make distclean' actually cleans.

2004-04-27  Adam Fedor  <fedor@gnu.org>

	* clean_os.sh: Report netbsd1.6* and netbsd2* as netbsdelf.

Tue Apr 20 10:27:16 2004  Matt Rice <ratmice@yahoo.com>

	* target.make: Use the GNU/Linux ELF code for GNU/Hurd too.

2004-04-12  Adam Fedor  <fedor@gnu.org>

	* common.make (GNUSTEP_FRAMEWORKS_FLAGS): Add missing close paren.

	* clean_os.sh: Add netbsd1.6Z

	* Documentation/GNUmakefile (GNUSTEP_TEXI2HTML_FLAGS): Add.
	* Documentation/gnustep.init: Some updates.
	* Documentation/announce.texi: Fix bug url.
	* Documentation/gnustep-howto.texi: Add more dependancy explanations.
	* Documentation/machines.texi: Add FreeBSD 5.x.

2004-04-02  David Ayers  <d.ayers@inode.at>

	* GNUstep-reset.sh: Unset DYLD_LIBRARY_PATH and	
	DYLD_FRAMEWORK_PATH.